# waldiez

./: .all-contributorsrc  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitmodules  .hintrc  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .stylelintrc.json  .terser-name-cache.json  .yamlignore  .yamllint.yaml  404.html  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.html  CONTRIBUTING.md  Containerfile  Makefile  NOTICE.html  NOTICE.md  README.md  README.npm.md  bun.lockb  cspell.json  do  do.py  do.ts  eslint.config.mjs  flow_name.mmd  index.html  mkdocs.yml  objects.inv  package.json  pyproject.toml  schema.json  (+15 more)
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: docs.yaml  image.yaml  images.yaml  lint.yaml  publish.yaml  publish_jupyter.yaml  publish_python.yaml  publish_react.yaml  publish_studio.yaml  publish_vscode.yaml  release.yaml  setup.yaml  test.yaml
.husky/: install.mjs  pre-commit
__mocks__/: zustand.ts
assets/javascripts/: bundle.c8b220af.min.js
blog/: index.html
blog/category/: customer-onboarding.html  sequential-chats.html  standup-comedians.html
contribute/: index.html
docs/: .nav.yml  __init__.py  index.md
docs/agents/: assistant_agent.md  captain_agent.md  docs_agent.md  group_manager.md  index.md  reasoning_agent.md  remote_agent.md  user_agent.md
docs/blog/: .authors.yml
docs/contribute/: index.md
docs/examples/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  index.md
docs/macros/: waldiez.py
docs/quickstart/: index.md
docs/static/: On-boarding.ipynb
docs/usage/: agents.md  convert.md  flow.md  index.md  models.md  run.md  skills.md  tools.md
examples/: .editorconfig  .gitignore  1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  README.md  index.html
examples/01 - Standup Comedians/: Standup Comedians 1.ipynb  Standup Comedians 1.py  Standup Comedians 1.waldiez  Standup Comedians 2.ipynb  Standup Comedians 2.py  Standup Comedians 2.waldiez  Standup Comedians 3.ipynb  Standup Comedians 3.py  Standup Comedians 3.waldiez
examples/02 - On-boarding/: On-boarding Async.ipynb  On-boarding Async.py  On-boarding Async.waldiez  On-boarding.ipynb  On-boarding.py  On-boarding.waldiez
examples/03 - Reflection/: Reflection.ipynb  Reflection.py  Reflection.waldiez
examples/04 - Tools/: Tool Use.ipynb  Tool Use.py  Tool Use.waldiez  get_legal_moves.waldiezTool  make_move.waldiezTool  waldiez_shared.waldiezTool
examples/05 - Coding/: Coding.ipynb  Coding.py  Coding.waldiez  get_and_plot_stock_data.waldiezTool
examples/06 - Planning/: Planning 1.ipynb  Planning 1.py  Planning 1.waldiez  Planning 2.ipynb  Planning 2.py  Planning 2.waldiez
examples/07 - Group chat with RAG/: RAG.ipynb  RAG.py  RAG.waldiez
examples/07 - Group chat with RAG (deprecated)/: RAG.ipynb  RAG.py  RAG.waldiez
examples/08 - ReAct using Tavily/: ReAct.ipynb  ReAct.py  ReAct.waldiez  search_tool.waldiezTool
examples/09 - AutoDefence/: AutoDefense Flow.ipynb  AutoDefense Flow.py  AutoDefense Flow.waldiez
examples/10 - Travel Planning/: Travel Planning.ipynb  Travel Planning.py  Travel Planning.waldiez
examples/11 - Swarm/: Swarm.ipynb  Swarm.py  Swarm.waldiez
examples/12 - Reasoning/: Chain-of-Thought Reasoning with DFS.ipynb  Chain-of-Thought Reasoning with DFS.py  Chain-of-Thought Reasoning with DFS.waldiez
examples/13 - Captain/: 1 - Simple.ipynb  1 - Simple.py  1 - Simple.waldiez  2 - With agent lib.ipynb  2 - With agent lib.py  2 - With agent lib.waldiez  3 - With agent lib and tool lib.ipynb  3 - With agent lib and tool lib.py  3 - With agent lib and tool lib.waldiez
examples/14 - HR Work Remotely/: HR_remote.ipynb  HR_remote.py  HR_remote.waldiez
examples/15 - Innovation Ideas/: README.md  innovator.ipynb  innovator.py  innovator.waldiez
examples/16 - Weather Travel Tips/: travelWeather_handoffs.ipynb  travelWeather_handoffs.py  travelWeather_handoffs.waldiez  travelWeather_roundRobin.ipynb  travelWeather_roundRobin.py  travelWeather_roundRobin.waldiez  (+3 more)
governance/: CLA.md  CONTRIBUTING.md  DCO.md
package_templates/python_only/: .flake8  CONTRIBUTING.md  Containerfile  Makefile  README.md  mkdocs.yaml  pyproject.toml
package_templates/python_only/docs/: development.md  index.md
package_templates/python_only/docs/static/css/: main.css
package_templates/python_only/my_package/: __init__.py  __main__.py  _version.py  cli.py  main.py
package_templates/python_only/requirements/: all.txt  dev.txt  docs.txt  main.txt  test.txt
package_templates/python_only/scripts/: build.py  clean.py  docs.py  first_lines.py  format.py  image.py  lint.py  requirements.py  test.py  version.py
package_templates/python_only/tests/: conftest.py  test___main__.py  test_cli.py  test_main.py  test_version.py
public/: .gitignore  browserconfig.xml  icon.icns  site.webmanifest
requirements/: ag2_extras.txt  all.txt  dev.txt  docs.txt  main.txt  mqtt.txt  redis.txt  reload.txt  test.txt  websockets.txt
scripts/: __init__.py  _lib.py  afterSite.ts  build.py  build.ts  bump_extras.py  changelog.ts  clean.py  dev.py  dev_server.py  do.ps1  do.sh  docs.py  docs.ts  examples.ts  format.py  header.py  image.py  lcovHtml.ts  lint.py  local_pypi.py  mergeLcov.ts  merge_lcov.py  mkdir.ts  monaco.ts  pack.ts  pin_extras.py  postinstall.mjs  remote.py  requirements.py  schema.ts  smoke.py  tailwind_windows_arm64.ts  test.py  test_installs.py  version.ts  video.ts
search/: search_index.js  search_index.json
src/: index.css  index.dev.tsx  index.tsx  svg.d.ts  vite-env.d.ts
static/: On-boarding.html
tests/: __init__.py  conftest.py  test_cli.py  test_exporter.py  test_logger.py  test_runner.py  test_schema.py  test_version.py  test_waldiez.py
ui-tests/: waldiez.test.tsx
usage/: agents.html  convert.html  flow.html  index.html  models.html  run.html  skills.html
vite.plugins/: addHeaderToDistFiles.ts  index.ts  transformPublicFiles.ts
waldiez/: __init__.py  __main__.py  cli.py  exporter.py  logger.py  runner.py
(+2036 files in other folders)
