
[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling==1.27.0",
  "hatch-nodejs-version==0.4.0",
]
[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Code Generators",
  "Typing :: Typed",
]

dependencies = [
  "ag2==0.9.8.post1",
  "openai[realtime]>=1.99.3",
  "aiocsv==1.3.2",
  "aiofiles==24.1.0",
  "aiosqlite==0.21.0",
  "numpy<=2.3.2",
  "nest_asyncio==1.6.0",
  "graphviz<=0.21",
  "pandas>=2",
  "pillow",
  "pip>=25.1.1",
  "jupytext",
  "parso==0.8.4",
  "psutil==7.0.0",
  "rpds-py==0.27.0",
  "platformdirs==4.3.8",
  "pydantic>=2.10.2,<3",
  # ag2[together]==0.9.8.post1 depends on together>=1.2
  # together>=1.2 depends on typer>=0.9,<0.16
  "typer>=0.9.0,<1",
  "click<8.2",
  # ../site-packages/click/types.py, line 54, in init
  #     self.name = func.name
  #                 ^^^^^^^^^^^^^
  # AttributeError: 'tuple' object has no attribute 'name'
  # ../site-packages/httpx/_main.py, line 379, in <module>
  #   @click.option(
  #    ~~~~~~~~~~~~^
  #       "--auth",
  #       ^^^^^^^^^
  #   ...<9 lines>...
  #       ),
  #       ^^
  "httpx<1",
  "watchdog==6.0.0",
  "websockets==15.0.1"
]
dynamic = ["version", "description", "authors", "urls", "keywords"]
name = "waldiez"
readme = "README.md"
requires-python = ">=3.10,<3.14"

[project.scripts]
waldiez = "waldiez.cli:app"

[project.optional-dependencies]
# stream-io-extensions: redis, websockets, mqtt
redis = [
    "ag2[redis]==0.9.8.post1",
]
websockets = [
    "ag2[websockets]==0.9.8.post1",
]
mqtt = [
    "paho-mqtt>=2.1.0,<3.0",
]
# jupyterlab extension
jupyter = [
  "waldiez_jupyter==0.5.9",
  "jupyterlab==4.4.6",
  "ipywidgets==8.1.7",
  "jupyter_server==2.16.0",
]
runner = [
  "waldiez_runner==0.5.9; python_version >= '3.11'",
]
studio = [
  "waldiez_studio==0.5.9",
]
ag2_extras = [
  "ag2[anthropic]==0.9.8.post1",
  "ag2[autobuild]==0.9.8.post1",
  "ag2[bedrock]==0.9.8.post1",
  "ag2[blendsearch]==0.9.8.post1",
  "ag2[cohere]==0.9.8.post1",
  "ag2[commsagent-discord]==0.9.8.post1",
  "ag2[commsagent-slack]==0.9.8.post1",
  "ag2[commsagent-telegram]==0.9.8.post1",
  "ag2[crawl4ai]==0.9.8.post1",
  "ag2[duckduckgo]==0.9.8.post1",
  # "ag2[gemini-realtime]==0.9.8.post1;sys_platform != 'win32'",
  # "ag2[gemini-realtime]==0.9.8.post1;sys_platform == 'win32' and platform_machine != 'arm64' and platform_machine != 'aarch64' and platform_machine != 'ARM64' and platform_machine != 'AARCH64'",
  # "ag2[gemini]==0.9.8.post1;sys_platform != 'win32'",
  # "ag2[gemini]==0.9.8.post1;sys_platform == 'win32' and platform_machine != 'arm64' and platform_machine != 'aarch64' and platform_machine != 'ARM64' and platform_machine != 'AARCH64'",
  "ag2[google-api]==0.9.8.post1",
  "ag2[google-client]==0.9.8.post1",
  "ag2[google-search]==0.9.8.post1",
  "ag2[groq]==0.9.8.post1",
  "ag2[interop-crewai]==0.9.8.post1",
  "ag2[interop-langchain]==0.9.8.post1",
  "ag2[lmm]==0.9.8.post1",
  # "ag2[mcp-proxy-gen]==0.9.8.post1",
  "ag2[mcp]==0.9.8.post1",
  "ag2[mistral]==0.9.8.post1",
  "ag2[neo4j]==0.9.8.post1;sys_platform != 'win32'",
  "ag2[neo4j]==0.9.8.post1;sys_platform == 'win32' and platform_machine != 'arm64' and platform_machine != 'aarch64' and platform_machine != 'ARM64' and platform_machine != 'AARCH64'",
  "ag2[ollama]==0.9.8.post1",
  "ag2[openai-realtime]==0.9.8.post1",
  "ag2[redis]==0.9.8.post1",
  "ag2[tavily]==0.9.8.post1",
  # "ag2[rag]==0.9.8.post1",
  # rag gives:
    # llama-index-embeddings-huggingface 0.6.0 depends on llama-index-core<0.14 and >=0.13.0
    # llama-index-llms-langchain 0.7.0 depends on llama-index-core<0.14 and >=0.13.0
    # llama-index-vector-stores-chroma 0.4.1 depends on llama-index-core<0.13.0 and >=0.12.0
  "llama-index-embeddings-huggingface",
  "llama-index-llms-langchain",
  "llama-index-vector-stores-chroma",
  # "ag2[retrievechat-couchbase]==0.9.8.post1",
  # "ag2[retrievechat-mongodb]==0.9.8.post1",
  # "ag2[retrievechat-pgvector]==0.9.8.post1",
  # "ag2[retrievechat-qdrant]==0.9.8.post1",
  # "ag2[retrievechat]==0.9.8.post1",
  "ag2[together]==0.9.8.post1;sys_platform != 'win32'",
  "ag2[together]==0.9.8.post1;sys_platform == 'win32' and platform_machine != 'arm64' and platform_machine != 'aarch64' and platform_machine != 'ARM64' and platform_machine != 'AARCH64'",
  "ag2[twilio]==0.9.8.post1",
  "ag2[websockets]==0.9.8.post1",
  "ag2[websurfer]==0.9.8.post1",
  "ag2[wikipedia]==0.9.8.post1",
  "chromadb>=0.5.10;sys_platform != 'win32'",
  "chromadb>=0.5.10;sys_platform == 'win32' and platform_machine != 'arm64' and platform_machine != 'aarch64' and platform_machine != 'ARM64' and platform_machine != 'AARCH64'",
  "couchbase>=4.4.0",
  "fastembed>=0.3.1",
  "pgvector>=0.4.0",
  "psycopg>=3.2.6;sys_platform == 'linux'",
  "psycopg>=3.2.6;sys_platform == 'win32' and platform_machine == 'arm64'",
  "psycopg>=3.2.6;sys_platform == 'win32' and platform_machine == 'ARM64'",
  "psycopg>=3.2.6;sys_platform == 'win32' and platform_machine == 'aarch64'",
  "psycopg>=3.2.6;sys_platform == 'win32' and platform_machine == 'AARCH64'",
  "psycopg[binary]>=3.2.6;sys_platform != 'linux' and platform_machine != 'arm64' and platform_machine != 'ARM64' and platform_machine != 'aarch64' and platform_machine != 'AARCH64'",
  "pydantic-ai>=0.0.21",
  "pymongo>=4.11",
  "qdrant-client[fastembed];sys_platform != 'win32'",
  "qdrant-client[fastembed];sys_platform == 'win32' and platform_machine != 'arm64' and platform_machine != 'aarch64' and platform_machine != 'ARM64' and platform_machine != 'AARCH64'",
]
dev = [
  "ag2[redis]==0.9.8.post1",
  "ag2[websockets]==0.9.8.post1",
  "autoflake==2.3.1",
  "bandit==1.8.6",
  "black[jupyter]==25.1.0",
  "build==1.3.0",
  "fakeredis==2.31.0",
  "flake8==7.3.0",
  "jsonschema==4.25.0",
  "jupyterlab==4.4.6",
  "notebook-shim>=0.2.4",
  "fastjsonschema>=2.21.2",
  "jupyter_server==2.16.0",
  "nbclient>=0.10.2",
  "nbformat>=5.10.4",
  "nbconvert>=7.16.6",
  "hatchling==1.27.0",
  "mypy==1.17.1",
  "mypy-extensions>=1.1.0",
  "paho-mqtt>=2.1.0,<3.0",
  "pandas-stubs==2.3.0.250703",
  "nodeenv>=1.9.1",
  "pre-commit==4.3.0",
  "pydocstyle==6.3.0",
  "pylint==3.3.8",
  "python-dotenv>=1.1.1",
  "ruff==0.12.9",
  "types-aiofiles==24.1.0.20250809",
  "types-jsonschema==4.25.0.20250809",
  "types-pyyaml==6.0.12.20250809",
  "types-psutil==7.0.0.20250801",
  "types-redis==4.6.0.20241004",
  "types-toml==0.10.8.20240310",
  "types-requests==2.32.4.20250809",
  "toml==0.10.2; python_version <= '3.10'",
  "watchdog==6.0.0",
  "yamllint==1.37.1",
]
docs = [
  "markdown-callouts==0.4.0",
  "mdx-include==1.4.2",
  "mdx_truly_sane_lists==1.3",
  "mkdocs==1.6.1",
  "mkdocs-autorefs==1.4.2",
  "mkdocs-jupyter==0.25.1",
  "mkdocs-macros-plugin==1.3.9",
  "mkdocs-material==9.6.17",
  "mkdocs-minify-html-plugin==0.3.4",
  "mkdocstrings[crystal,python]==0.30.0",
  "mkdocstrings-crystal==0.3.7",
  "mkdocstrings-python==1.17.0",
  "mkdocs-awesome-nav==3.1.2",
  "mkdocs-open-in-new-tab==1.0.8",
  "natsort==8.4.0",
]
test = [
  "ag2[redis]==0.9.8.post1",
  "ag2[websockets]==0.9.8.post1",
  "fakeredis==2.31.0",
  "paho-mqtt>=2.1.0,<3.0",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "pytest-cov==6.2.1",
  "pytest-env==1.1.5",
  "pytest-html==4.1.1",
  "pytest-sugar==1.1.0",
  "pytest-timeout==2.4.0",
  "pytest-xdist==3.8.0",
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = ["**/example.py", ".gitignore"]
packages = ["waldiez", "waldiez.*"]
directory = "out/dist"

[tool.hatch.build.targets.wheel]
exclude = ["**/example.py"]
packages = ["waldiez", "waldiez.*"]
directory = "out/dist"

[tool.hatch.build.hooks.version]
path = "waldiez/_version.py"
template = '''
# SPDX-License-Identifier: Apache-2.0.
# Copyright (c) 2024 - 2025 Waldiez and contributors.
"""Version information for waldiez.

This file is automatically generated by Hatchling.
Do not edit this file directly.
"""
__version__ = VERSION = "{version}"
'''

[tool.hatch.metadata.hooks.nodejs]
contributors-as-maintainers = false
fields = ["description", "authors", "urls"]

[tool.hatch.envs.default]
python = "3.13"
installer = "uv"
post-install-commands = [
  "pip install .[dev,test,docs,ag2_extras,redis,websockets,mqtt]"
]

[tool.hatch.envs.default.scripts]
pre-test = [
  "python -m pip install -qq --upgrade pip",
  "pip install -qq -r requirements/test.txt"
]
test = [
  "hatch run pre-test",
  "pytest -c pyproject.toml --cov=waldiez --cov-branch --cov-report=term-missing:skip-covered --cov-report=lcov:coverage/py/lcov.info --cov-report=html:coverage/py/html --cov-report=xml:coverage/py/coverage.xml --junitxml=coverage/py/xunit.xml tests",
]
test-models = [
  "hatch run pre-test",
  "pytest -c pyproject.toml --cov=waldiez/models --cov-branch --cov-report=term-missing:skip-covered -vv tests/models"
]
test-exporting = [
  "hatch run pre-test",
  "pytest -c pyproject.toml --cov=waldiez/exporting --cov-branch --cov-report=term-missing:skip-covered -vv tests/exporting"
]
test-io = [
  "hatch run pre-test",
  "pytest -c pyproject.toml --cov=waldiez/io --cov-branch --cov-report=term-missing:skip-covered -vv tests/io"
]
test-running = [
  "hatch run pre-test",
  "pytest -c pyproject.toml --cov=waldiez/running --cov-branch --cov-report=term-missing:skip-covered -vv tests/running"
]
test-ws = [
  "hatch run pre-test",
  "pytest -c pyproject.toml --cov=waldiez/ws --cov-branch --cov-report=term-missing:skip-covered -vv tests/ws"
]

format-black = "black --config pyproject.toml waldiez tests scripts"
format-autoflake = "autoflake --in-place --remove-all-unused-imports --remove-unused-variables --recursive waldiez tests scripts"
format-ruff = "ruff format --config pyproject.toml waldiez tests scripts"
format = [
  "hatch run format-black",
  "hatch run format-autoflake",
  "hatch run format-ruff"
]

lint-black = "black --config pyproject.toml --check --diff waldiez tests scripts"
lint-mypy = "mypy --config pyproject.toml waldiez tests scripts"
lint-flake8 = "flake8 --config .flake8 waldiez tests scripts"
lint-bandit = "bandit -r -c pyproject.toml waldiez scripts"
lint-yamllint = "yamllint ."
lint-ruff = "ruff check --config pyproject.toml waldiez tests scripts"
lint-pylint = "pylint --rcfile=pyproject.toml waldiez tests scripts"
lint = [
  "hatch run lint-black",
  "hatch run lint-mypy",
  "hatch run lint-flake8",
  "hatch run lint-bandit",
  "hatch run lint-yamllint",
  "hatch run lint-ruff",
  "hatch run lint-pylint",
]

forlint = [
  "hatch run format",
  "hatch run lint"
]

clean = "python scripts/clean.py"
smoke = "python scripts/smoke.py"
smoke-local = "python scripts/smoke.py --local"
smoke-remote = "python scripts/smoke.py --remote"

docs = "python -m mkdocs build -d site"
docs-live = "python -m mkdocs serve --watch mkdocs.yml --watch docs --watch waldiez --dev-addr localhost:8400"
build = "python -m build --wheel --sdist --outdir out/dist"
image = "python scripts/image.py"

check = [
  "hatch run clean",
  "hatch run format",
  "hatch run lint",
  "hatch run test",
  "hatch run smoke"
]

matrix-test = "hatch run test:test"
# alias
test-matrix = "hatch run test:test"

release = [
  "hatch run check",
  "hatch run matrix-test",
  "hatch run docs",
  "hatch run build"
]

all = [
  "hatch run release",
  "hatch run image"
]

[tool.hatch.envs.test]
inherit = true

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

# pip-tools
[tool.pip-tools]
generate-hashes = false
header = false
annotate = false
strip-extras = false
newline = "LF"


# black
[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | .local
  | _build
  | __init__.py
  | .local
  | examples
  | node_modules
  | waldiez_out
)/
'''
include = '''
    \.pyi?$
'''
line-length = 80
skip-string-normalization = true

# mypy
[tool.mypy]
files = "."
show_error_codes = true
# xcode/dmypy: follow-imports=silent not supported
# follow_imports = "skip"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = [
  ".venv",
  ".local",
  "node_modules",
  "examples",
  "waldiez_out",
]
ignore_missing_imports = false
no_implicit_reexport = true
platform = "linux"
plugins = [
  "pydantic.mypy",
]
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "waldiez.tests.*"
# with python < 3.13 we get seem to get "call-arg" errors :(
# and with python>=3.13 "unused-ignore" : (
disable_error_code = ["call-arg"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# pylint
[tool.pylint.master]
extension-pkg-whitelist = []
load-plugins = [
  "pylint.extensions.mccabe",
  "pylint.extensions.redefined_variable_type",
  "pylint.extensions.broad_try_clause",
  "pylint.extensions.no_self_use",
  "pylint.extensions.docparams",
]
# reports=true
fail-under = 8.0
ignore = ["CVS"]
ignore-paths = [
  ".venv",
  ".local*",
  "node_modules",
  "examples",
  "waldiez_out",
]
recursive = true

unsafe-load-any-extension = "no"

[tool.pylint.messages_control]
enable = ["c-extension-no-member"]
[tool.pylint.format]
max-line-length = 80
[tool.pylint.similarities]
ignore-imports = "yes"
ignore-signatures = "yes"
min-similarity-lines = 10
[tool.pylint.broad_try_clause]
max-try-statements = 3
[tool.pylint.design]
max-args = 11
max-attributes = 11
max-positional-arguments = 11
max-statements = 50
[tool.pylint.string]
check-quote-consistency = true
check-str-concat-over-line-jumps = true
[tool.pylint.parameter_documentation]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false
# Possible choices: ["sphinx", "epytext", "google", "numpy", "default"]
default-docstring-type = "numpy"

# bandit
[tool.bandit]
exclude_dirs = [
  ".venv",
  ".local",
  "node_modules",
  "examples",
  "waldiez_out",
]
# B104: bind to all interfaces (0.0.0.0)
# B110: allow pass on try/except
# B404: allow import subprocess
# B602, B603: allow shell=True (subprocess, popen)
skips = ["B104", "B110", "B404", "B602", "B603"]
[tool.bandit.assert_used]
skips = ["*_test.py", "*/test_*.py", "./tests/**/*.py"]

# ruff
[tool.ruff]
extend-exclude = [
  ".venv",
  ".local",
  "node_modules",
  "examples",
  "waldiez_out",
  "docs",
]
line-length = 80

[tool.ruff.lint]
select = ["F", "Q", "D", "I", "G", "C4", "C90", "E", "W", "B"]
# # Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# # Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# exclude = ["*.pyi", "*.j2"]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
docstring-code-format = true
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
split-on-trailing-comma = true

# pytest
[tool.pytest.ini_options]
addopts = "-d -s -n auto --exitfirst --durations=10  --color=yes --timeout=120"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
filterwarnings = [
  # DeprecationWarning:
  #   Type google._upb._message.MessageMapContainer uses PyType_Spec with a metaclass that has custom tp_new.
  #   This is deprecated and will no longer be allowed in Python 3.14.
  "ignore::DeprecationWarning",
]
python_files = [
  "tests.py",
  "test_*.py",
  "*_tests.py",
]
pythonpath = ["."]
#
env = [
  "WALDIEZ_TESTING=1",
  "PYTHONUNBUFFERED=1"
]
#
# coverage
[tool.coverage.run]
omit = [
  "example.py",
  "_version.py",
  "**/cli_extras/*.py",
]
[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
fail_under = 80
precision = 2
